@@ -1,3 +1,9 @@
+2017-02-13  Kyrylo Tkachov  <kyrylo.tkachov@arm.com>
+
+	* config/aarch64/aarch64.c (has_memory_op): Delete.
+	(aarch64_madd_needs_nop): Use contains_mem_rtx_p instead of
+	has_memory_op.
+
 2017-02-13  Jakub Jelinek  <jakub@redhat.com>
 
 	PR rtl-optimization/79388
@@ -6,7 +12,7 @@
 	corresponding dest has last value recorded, invalidate that last
 	value.
 
-2016-02-13  Kyrylo Tkachov  <kyrylo.tkachov@arm.com>
+2017-02-13  Kyrylo Tkachov  <kyrylo.tkachov@arm.com>
 
 	* config/arm/arm.c (arm_print_tune_info): Use ASM_COMMENT_START instead
 	of explicit '@'.  Add missing assembly comment marker on branch costs
